<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginFragment"
        android:id="@+id/loginFragment">

        <TextView
            android:id="@+id/email_text"
            style="@style/label_style"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_48"
            android:text="@string/Email_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/password_text"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_48"
            android:text="@string/Password_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:ems="10"
            android:hint="@string/Email_text"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.779"
            app:layout_constraintStart_toEndOf="@+id/email_text" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:ems="10"
            android:hint="@string/Password_text"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/password_text" />

        <Button
            android:id="@+id/signup_btn"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_72"
            android:text="@string/SignUp_Button"
            app:layout_constraintBaseline_toBaselineOf="@+id/signIn_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signIn_btn"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_72"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/SignIn_Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_editText"
            app:layout_constraintVertical_bias="0.515" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

